Add simple agreement page
Change-Id: Id4c9ec177cf6a5bbfe0327e7f7e496be82aa06a9
Signed-off-by: LibXZR <i@xzr.moe>

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -10,4 +10,10 @@
     <string name="done_title">Done</string>
     <string name="done_btn">Go</string>
     <string name="done_desc">Congratulations, you have finished all the setups. Click the button below to start using Kaleidoscope.</string>
+
+    <!--Agreement Page-->
+    <string name="agreement_title">Agreement</string>
+    <string name="agreement_agree">I agree everything mentioned in the agreement</string>
+    <string name="agreement_alert_title">Agreement not agreed</string>
+    <string name="agreement_alert_message">You must agree the agreement before continuing.</string>
 </resources>
